Minor style fix
This was originally made extra tall to work with an old recordpicker design that is no longer in use across any version, in Bootstrap 5 it makes the dropdown sit too low, so we can safely make it shorter.

--- a/assets/pricewidget.css
+++ b/assets/pricewidget.css
@@ -24,8 +24,8 @@
 .field-mall-price.field-mall-price-text .mall-price-btn {
   right: 13px;
   top: 50%;
-  margin-top: -44px;
-  height: 88px;
+  margin-top: -22px;
+  height: 44px;
 }
 .field-mall-price.field-mall-price-textarea .mall-price-btn {
   right: 11px;
